@@ -131,6 +131,10 @@
 		<Product type="0002" id="0078" name="ZW120 Door Window Sensor Gen5" config="aeotec/zw120.xml" />
 		<Product type="0102" id="0078" name="ZW120 Door Window Sensor Gen5" config="aeotec/zw120.xml" />
 		<Product type="0202" id="0078" name="ZW120 Door Window Sensor Gen5" config="aeotec/zw120.xml" />
+        <Product type="0003" id="0079" name="ZW121 LED Strip" config="aeotec/zw121.xml"/>
+        <Product type="0103" id="0079" name="ZW121 LED Strip" config="aeotec/zw121.xml"/>
+        <Product type="0203" id="0079" name="ZW121 LED Strip" config="aeotec/zw121.xml"/>
+        <Product type="0303" id="0079" name="ZW121 LED Strip" config="aeotec/zw121.xml"/>
 	</Manufacturer>
     <Manufacturer id="0111" name="Airline Mechanical">
         <Product type="8200" id="0200" name="ZDS-100"/>
