@@ -71,6 +71,7 @@ DISTFILES =	.gitignore \
 	config/aeotec/zw112.xml \
 	config/aeotec/zw117.xml \
 	config/aeotec/zw120.xml \
+	config/aeotec/zw121.xml \
 	config/assa_abloy/RealLivingCapTouch.xml \
 	config/cooper/RF9505-T.xml \
 	config/cooper/RF9540-N.xml \
